--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,13 @@
 body {
     background-color: #fffbf7;
+    margin= 0;
 }
 
 h1 {
     color:#025157;
+    font-family: 'Alegreya', serif;
+    font-weight: 900;
+    font-size: 60px;
 }
 
 h4 {
@@ -18,4 +22,47 @@ p {
 button {
     color: #fff;
     background-color: #025157;
+}
+
+.header {
+    margin:40px 20px 0;
+    font-size: 0;
+    height: 80px;
+}
+
+.header li {
+    display: inline;
+}
+
+.header ul {
+    padding: 0;
+}
+
+.header > * {
+    display: inline-block;
+    font-size: 16px;
+}
+
+.header .logo {
+    width: 20%;
+}
+
+.header .navbar  {
+    width: 60%;
+    text-align: center;
+}
+
+.header .actions {
+    width:20%;
+    text-align: right;
+}
+
+.main {
+    margin-top: 150px;
+    text-align: center; 
+}
+
+.main {
+    width: 80%;
+    max-width: 1000px;
 }
